correctly writing tagging files in default folder with default GPX file

--- a/Smaphotag/Smaphotag-Info.plist
+++ b/Smaphotag/Smaphotag-Info.plist
@@ -44,6 +44,7 @@
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.jpeg</string>
+				<string>public.folder</string>
 			</array>
 		</dict>
 		<dict>
