added introduction and switched to Dropbox

--- a/Smaphotag/Smaphotag-Info.plist
+++ b/Smaphotag/Smaphotag-Info.plist
@@ -61,6 +61,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>googleDrivePath</key>
-	<string>~/Google Drive</string>
+	<string>~/Dropbox</string>
 </dict>
 </plist>
